--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,29 @@
 .app-wrapper {
     margin: 0 auto;
     display: grid;
-width: 1200px;
+    width: 1200px;
     grid-template-areas:
     "h h"
     "n c";
-     grid-template-rows: 60px 1fr;
-      grid-template-colums: 2fr 10fr;
-      grid-gap: 10px
+    grid-template-rows: 60px 1fr;
+    grid-template-colums: 2fr 10fr;
+    grid-gap: 10px
 }
+
+
+.app-wrapper-content {
+
+.content {
+    grid-area: c;
+    background-color: midnightblue;
+}
+
+.content img {
+    width: 1200px;
+    height: 200px;
+
+}
+
+};
 
 
