--- a/src/componets/Dialogs/Dialogs.module.css
+++ b/src/componets/Dialogs/Dialogs.module.css
@@ -1,4 +1,24 @@
+.dialogs {
+    display: grid;
+    grid-template-columns: 2fr 25fr;
+}
 
+.dialogsItems {
+    padding: 10px;
 
+}
+
+.dialogsItems .active{
+    color: gold;
+}
+
+.messages {
+    padding: 10px;
+
+}
+
+.message {
+
+}
 
 
