--- a/src/componets/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/componets/Profile/ProfileInfo/ProfileInfo.module.css
@@ -2,6 +2,7 @@ c.descriptionBlock {
     padding: 10px;
 }
 .Face   {
-    width: 1200px;
-    size: 200px;
+    width: 900px;
+    size: 200px
 }
+
